--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "lucide-react": "^0.477.0",
     "next": "14.2.24",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
